# crap4py

./: .gitignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  pyproject.toml
.agents/: backlog.md  ledger-project.md  ledger-swarmforge.md
.agents/roles/: architect.md  cleaner.md  coder.md  curator.md  hardender.md
.agents/skills/agent-retro-arc-fallback/: SKILL.md
.agents/skills/agent-retro-worktree-fallback/: SKILL.md
.claude/skills/agent-retro/: SKILL.md
.entire/: settings.json
.github/workflows/: ci.yml  release.yml
04/4749812848/: metadata.json
04/4749812848/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
04/4749812848/1/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
26/ba09f9906d/: metadata.json
26/ba09f9906d/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
2e/a0fe7c4b87/: metadata.json
2e/a0fe7c4b87/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
3e/a6fb4ddbd5/: metadata.json
59/b7a1e287d4/: metadata.json
72/3973ea78ac/: metadata.json
80/8ecb4fb41d/: metadata.json
acceptance/: generate_acceptance.py  run_acceptance.sh  runner_adapter.py
acceptance/fixtures/: c1_fixture.lcov  c1_fixture.py  c2_fixture.lcov  c3_fixture.lcov  c4_fixture.lcov
acceptance/steps/: complexity_qa_steps.py  complexity_steps.py  coverage_qa_steps.py  coverage_steps.py  discovery_qa_steps.py  discovery_steps.py  report_qa_steps.py  report_steps.py  step_lib.py
ad/b1b455d7ff/: metadata.json
da/9ef1ec34b2/: metadata.json
docs/adr/: 0001-cyclomatic-complexity-model.md  0002-coverage-is-branch-based.md  0003-function-discovery-and-naming.md  0004-crap-report-command.md
docs/agents/: domain.md  issue-tracker.md
f5/508aca6a20/: metadata.json
fa/14df2ca8c8/: metadata.json
features/: complexity.feature  complexity_qa.feature  coverage.feature  coverage_qa.feature  discovery.feature  discovery_qa.feature  report.feature  report_qa.feature
src/crap4py/: __main__.py  _crap.py  _discovery_io.py  _format.py  _report.py  complexity.py  coverage.py  discovery.py
swarmforge/: swarmforge.conf
swarmforge/roles/: curator.prompt
tests/: test_arch.py  test_complexity.py  test_complexity_properties.py  test_coverage.py  test_coverage_properties.py  test_crap_score.py  test_discovery.py  test_discovery_hardening.py  test_discovery_properties.py  test_main.py  test_report.py
(+39 files in other folders)
