[project]
name = "crap4py"
version = "0.1.0"
description = "CRAP score per function for Python source files"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
crap4py = "crap4py.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crap4py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["crap4py"]
branch = true

[tool.mutmut]
source_paths = ["src/"]
mutate_only_covered_lines = true

[dependency-groups]
dev = [
    "hypothesis>=6.155.7",
    "mutmut>=3.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
