[project]
name = "crap4py"
version = "0.1.0"
description = "CRAP score per function for Python source files"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
crap4py = "crap4py.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crap4py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["crap4py"]
branch = true

[tool.mutmut]
source_paths = ["src/"]
mutate_only_covered_lines = true

[dependency-groups]
dev = [
    "bump-my-version>=0.32.0",
    "hypothesis>=6.155.7",
    "mutmut>=3.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.11.0",
]

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
